# Tactics-Ogre-2

./: CMakeLists.txt
doxygen/: Doxyfile
resources/AnimationSets/Unit/: smallunit.json  smallunit2.json
src/: Animation.hh  CMakeLists.txt  Factory.hh  Graphics.hh  Isometry.hh  Resources.hh  SFML.hpp  Unit.hh  Utils.hh  main.cpp
src/Animation/: AnimatedObject.cpp  AnimatedObject.hpp  Animation.cpp  Animation.hpp  AnimationSet.cpp  AnimationSet.hpp  CMakeLists.txt
src/Controllers/: CMakeLists.txt.bkp  Controlled.hpp  UnitController.hpp
src/Factory/: CMakeLists.txt  FactoryElement.hpp  TileCompositeFactory.cpp  TileCompositeFactory.hpp  TileFactory.cpp  TileFactory.hpp  UnitFactory.cpp  UnitFactory.hpp
src/Graphics/: CMakeLists.txt  RenderableObject.cpp  RenderableObject.hpp  Renderer.cpp  Renderer.hpp
src/Isometry/: CMakeLists.txt  IsometricMap.cpp  IsometricMap.hpp  IsometricObject.hpp  IsometricTile.cpp  IsometricTile.hpp  IsometricTileComposite.cpp  IsometricTileComposite.hpp
src/Resources/: CMakeLists.txt  Preset.cpp  Preset.hpp
src/Resources/Preset/: AnimationSetPreset.cpp  AnimationSetPreset.hpp  CMakeLists.txt  SpritePreset.cpp  SpritePreset.hpp
src/Resources/Preset/SpritePreset/: CMakeLists.txt  CliffsetSpritePreset.hpp  TilesetSpritePreset.hpp  UnitSpritePreset.hpp
src/Resources/Preset/SpritePreset/CliffsetSpritePreset/: CMakeLists.txt  CliffsetSpritePreset1.cpp  CliffsetSpritePreset1.hpp
src/Resources/Preset/SpritePreset/TilesetSpritePreset/: CMakeLists.txt  TilesetSpritePreset1.cpp  TilesetSpritePreset1.hpp
src/Resources/Preset/SpritePreset/UnitSpritePreset/: CMakeLists.txt  SmallUnitSpritePreset.cpp  SmallUnitSpritePreset.hpp  SmallUnitSpritePreset2.cpp  SmallUnitSpritePreset2.hpp
src/Unit/: CMakeLists.txt  Unit.cpp  Unit.hpp
src/Unit/Unit/: CMakeLists.txt  SmallUnit.cpp  SmallUnit.hpp
src/Utils/: CMakeLists.txt
src/Utils/Debug/: CMakeLists.txt  Debug.hpp  DebugUtils.hpp  TraceReturn.hpp
src/Utils/Game/: CMakeLists.txt  Controlled.hpp  OrientationEnum.hpp  TeamColorEnum.hpp  UnitEnum.hpp
src/Utils/Graphics/: CMakeLists.txt  ImageUtils.cpp  ImageUtils.hpp  SpriteUtils.cpp  SpriteUtils.hpp  TextureUtils.cpp  TextureUtils.hpp
src/Utils/Isometry/: CMakeLists.txt  IsometricMapUtils.cpp  IsometricMapUtils.hpp
src/Utils/Resources/: AnimationSetParser.cpp  AnimationSetParser.hpp  CMakeLists.txt  TilesetEnum.hpp
